Add get project method
