# docs/apidocs.swagger.json
@@ -224,6 +224,39 @@
         ]
       }
     },
+    "/v1/projects/{id}": {
+      "get": {
+        "summary": "Детальная информация о проекте",
+        "operationId": "ProtoRegistry_GetProject",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetProjectResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id проекта",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "ProtoRegistry"
+        ]
+      }
+    },
     "/v1/versions": {
       "get": {
         "summary": "Список версий",
@@ -394,6 +427,16 @@
         }
       },
       "title": "Файл"
+    },
+    "v1GetProjectResponse": {
+      "type": "object",
+      "properties": {
+        "project": {
+          "$ref": "#/definitions/v1Project",
+          "title": "проект"
+        }
+      },
+      "title": "Ответ на запрос детальной информации о проекте"
     },
     "v1GetProjectsResponse": {
       "type": "object",
